--- a/static/css/site.css
+++ b/static/css/site.css
@@ -6,6 +6,14 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+.description {
+    display: none;
+}
+
+.description p {
+    margin: 10px;
+}
+
 header ul {
     margin: 0;
 }
@@ -74,6 +82,7 @@ div.cube {
     background: white;
     width: 23%;
     vertical-align: top;
+    width: 250px;
 }
 
 div.cube:hover p.name {
@@ -90,7 +99,8 @@ p.name {
     border-bottom: 1px solid #2b415433;
 }
 
-button, main a.btn {
+button,
+main a.btn {
     border: none;
     padding: 8px;
     text-align: center;
@@ -220,12 +230,12 @@ span.error {
     display: block;
 }
 
-img#sadFaceImg{
+img#sadFaceImg {
     display: block;
     margin: 0 auto;
 }
 
-h2{
+h2 {
     text-align: center;
 }
 
