--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,18 @@
 <h1>Browser</h1>
-<form action="" method="">
-  <input type="text" class="search" name="search" placeholder="Search...">
-  <input type="number" name="from" class="difficulty" placeholder="Difficulty from...">
-  <span>-</span>
-  <input type="number" name="to" class="difficulty" placeholder="Difficulty to...">
-  <input type="submit" value="search">
+<form action="/" method="get">
+    <input type="text" class="search" name="search" placeholder="Search..." value="{{query.search}}">
+    <input type="number" name="from" class="difficulty" placeholder="Price from..." value="{{query.from}}">
+    <span>-</span>
+    <input type="number" name="to" class="difficulty" placeholder="Price to..." value="{{query.to}}">
+    <input type="submit" value="search">
 </form>
-{{#each data}}
-{{> card}}
-{{else}}
-<p>No data available!</p>
-{{/each}}
+
+<div id="cars">
+    {{#each data}}
+    {{> card}}
+    {{else}}
+    <p>No data available!</p>
+    {{/each}}
+</div>
+
+<script src="/static/js/script.js"></script>
